--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "xv6"]
-	path = xv6
+[submodule "lab"]
+	path = lab
 	url = https://pdos.csail.mit.edu/6.828/2017/jos.git
-	ignore = dirty
