--- a/bootloader/Cargo.toml
+++ b/bootloader/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "bootloader"
 version = "0.1.0"
-authors = ["youta ogino <yota.ogino@justincase.jp>"]
+authors = ["youta ogino <dev.youta1119@gmail.com>"]
 
 [dependencies]
-lib-x86 = { path = "../lib-x86"}
