invoke rust from assembly

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -1,9 +1,24 @@
-all: bootloader.bin
+TOOLCHAIN := i386-jos-elf-
+OBJCOPY	:= $(TOOLCHAIN)objcopy
 
-qemu:
-	target/i386-unknown-none/debug/bootloader
+BUILD_FRAVER := release
+RUSTC_TERGET := i386-unknown-none
+CARGO_FLAG := 
+ifeq ($(BUILD_FRAVER),release)
+    CARGO_FLAG += --release
+endif
+OBJ_DIR := obj
 
-bootloader.bin:
-	RUST_TARGET_PATH=$(shell pwd) xargo build --target i386-unknown-none
-	i386-jos-elf-objcopy -O binary -S target/i386-unknown-none/debug/bootloader bootloader.bin
+.PHONY: clean
 
+target/$(RUSTC_TERGET)/$(BUILD_FRAVER)/bootloader: src/*.rs src/*.S $(RUSTC_TERGET).json
+	RUST_TARGET_PATH=$(shell pwd) xargo build --target $(RUSTC_TERGET) $(CARGO_FLAG)
+
+$(OBJ_DIR)/bootloader.bin: target/$(RUSTC_TERGET)/$(BUILD_FRAVER)/bootloader
+	@mkdir -p $(OBJ_DIR)
+	$(OBJCOPY) -O binary -S $< $@
+clean:
+	rm -rf obj
+	rm -rf target/$(RUSTC_TERGET)/$(BUILD_FRAVER)/bootloader
+
+	
