--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["youta ogino <dev.youta1119@gmail.com>"]
 
 [dependencies]
+x86 = { path = "../lib/x86"  }
 
 [lib]
 crate-type = ["staticlib"]
