--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,6 +5,11 @@ authors = ["youta ogino <dev.youta1119@gmail.com>"]
 
 [dependencies]
 x86 = { path = "../lib/x86"  }
+spin = "0.4.10"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
 
 [lib]
 crate-type = ["staticlib"]
